--- a/main.html
+++ b/main.html
@@ -13,9 +13,9 @@
 
 	<nav>
   <ul>
-    <li><a href="#">Home</a></li>
-    <li><a href="#">About</a></li>
-    <li><a href="#">Contact</a></li>
+    <li><a href="#home">Home</a></li>
+    <li><a href="#about">About</a></li>
+    <li><a href="#contacts">Contact</a></li>
   </ul>
 </nav>
 
